syntax = "proto3";

package goluca.entry.v1;

import "goluca/entry/v1/amount.proto";
import "google/protobuf/timestamp.proto";

message Entry {
  string id = 1;
  string transaction_id = 2;
  string description = 3;
  string debit_account = 4;
  string credit_account = 5;
  goluca.entry.v1.Amount amount = 6;
  google.protobuf.Timestamp created_at = 7;
}
